--- a/frontend/src/components/ResetPassword.css
+++ b/frontend/src/components/ResetPassword.css
@@ -11,7 +11,7 @@ html, body {
   /* Define the font */
   @font-face {
     font-family: 'Helvetica';
-    src: url('../fonts/helvetica.woff') format('truetype');
+    src: url('../fonts/Helvetica.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
@@ -87,7 +87,7 @@ html, body {
     font-size: 55px !important;
     font-weight: bolder;
     white-space: nowrap;
-    top: -120px;
+    top: 20px;
     left: 0px;
   }
 
