--- a/frontend/src/components/LandlordProfile.css
+++ b/frontend/src/components/LandlordProfile.css
@@ -1,14 +1,14 @@
 /* Define the font */
 @font-face {
     font-family: 'Helvetica';
-    src: url('../fonts/helvetica.woff') format('truetype');
+    src: url('../fonts/helvetica.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Helvetica-Bold';
-    src: url('../fonts/helvetica-bold.woff') format('truetype');
+    src: url('../fonts/helvetica-bold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -19,17 +19,18 @@
     min-height: 100vh;
     padding: 2vw;
     display: flex;
+    padding-top: 80px;
     flex-direction: column;
     color: white;
     box-sizing: border-box;
-    overflow: auto;
-    height: 300px;
+    overflow-y: auto;
+    height: 500px;
 }
 
 
 /* Header */
 .landlord-header {
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -38,6 +39,7 @@
     justify-content: space-between;
     align-items: center;
     z-index: 10;
+    background-color: #4D55A5; /* Ensure background color remains */
     box-sizing: border-box;
 }
 
@@ -83,6 +85,7 @@
     justify-content: space-between;
     padding: 20px;
     box-sizing: border-box;
+    
 }
 
 /* Middle Icon */
@@ -466,12 +469,12 @@
 /*Side icons*/
 .icons-container {
     position: absolute;
-    bottom: 240px; /* Adjust this to place it where you want vertically */
-    right: -150px;  /* Adjust this to place it where you want horizontally */
+    bottom: 240px; /* Adjust this as needed */
+    right: -150px; /* Adjust this as needed */
     display: flex;
     flex-direction: column;
     gap: 20px;
-    z-index: 1000; /* Ensures it stays above other content */
+    z-index: 5;
 }
 
 .icon {
