--- a/frontend/src/components/MyRatings.module.css
+++ b/frontend/src/components/MyRatings.module.css
@@ -66,7 +66,7 @@
 
 .main-content {
     padding-top: 100px;
-    padding-left: 240px;
+    padding-left: 100px;
     flex-grow: 1;
     background-color: #4D55A5;
     min-height: 100vh; /* to fill all with color*/
@@ -127,8 +127,8 @@
     background-color: #ccc;
     padding: 30px;
     border-radius: 2px;
-    width: 700px;
-    height: 300px;
+    width: 740px;
+    height: 290px;
     display: flex;
     flex-direction: column;
     gap: 10px; /* Space between elements */
@@ -137,13 +137,12 @@
 
 /* Score box styling */
 .score-box {
-    position: absolute;
-    top: -50px;
-    right: -60px;
+    position: relative;
+    top: 0px;
     background-color: #94C841;
     color: white;
     padding: 10px 70px;
-    border-radius: 10px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     border: 2px solid white;
@@ -166,20 +165,29 @@
     justify-content: space-between;
     align-items: flex-end; 
     margin-bottom: 5px;
+    align-items: center;
 }
 
 /* Name styling */
 .rating-name {
-    font-size: 50px;
+    font-size: 60px;
     color: white;
     font-weight: bold;
+    padding: 15px;
 }
 
 /* Submitted date styling */
 .submitted-date {
+    position: absolute;
+    bottom: 15px; /* Distance from the bottom of the container */
+    right: 20px;  /* Distance from the right side */
     font-size: 16px;
-    color: #000000;
+    color: #000000; /* Adjust color as needed */
+    font-weight: normal;
+    background-color: none;
+    padding: 0px 10px; /* Optional: Add padding for better visibility */
 }
+
 
 /* Comments section styling */
 .rating-comments {
@@ -189,13 +197,13 @@
     color: black;
     font-size: 16px;
     line-height: 1.5;
-    height: 200px;
+    height: 130px;
 }
 
 /* Icons for edit and delete */
 .rating-actions {
     position: absolute;
-    top: 70px;
+    top: 10px;
     right: -50px;
     display: flex;
     flex-direction: column;
@@ -206,4 +214,14 @@
     width: 32px;
     height: 32px;
     cursor: pointer;
+}
+
+/* Scrollable Ratings Section */
+.ratings-scrollable {
+    max-height: 70vh; /* Adjust height as needed */
+    overflow-y: auto;
+    position: relative;
+    padding-right: 20px;
+    margin-right: -20px;
+    scroll-behavior: smooth;
 }
