--- a/frontend/src/components/LandlordProfile.css
+++ b/frontend/src/components/LandlordProfile.css
@@ -23,6 +23,7 @@
     color: white;
     box-sizing: border-box;
     overflow: auto;
+    
 }
 
 /* Header */
@@ -268,7 +269,7 @@
 }
 
 /* Reviews Section */
-.reviews-section {
+.landlord-reviews-section {
     display: flex;
     justify-content: center;
     width: 80%;
@@ -276,7 +277,7 @@
     margin-top: 20px;
 }
 
-.reviews-section h2 {
+.landlord-reviews-section h2 {
     color: white;
     font-size: 1.5rem;
     margin-bottom: 1vw;
