Updated MyAccount / MyRatings for Signed In State Compatibility

--- a/frontend/src/components/MyAccount.module.css
+++ b/frontend/src/components/MyAccount.module.css
@@ -18,45 +18,6 @@
     min-height: 100vh;
 }
 
-/* Side menu */
-.side-menu {
-    width: 350px;
-    background-color: #4D55A5;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    padding-left: 50px;
-    padding-top: 300px;
-    font-family: 'Helvetica', sans-serif;
-    font-weight: bold;
-    font-size: 19px;
-}
-
-.side-menu nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.side-menu nav ul li {
-    display: flex;
-    align-items: center;
-    margin: 15px 0;
-    cursor: pointer;
-}
-
-/* Icons next to sidemenus text */
-.icon {
-    width: 25px;
-    height: 25px;
-    margin-right: 15px;
-    fill: white;
-}
-
-.this {
-    width: 13px;
-    height: 13px;
-    padding-left: 10px;
-}
 
 .logo img {
     width: 300px; /* Adjust width as needed */
@@ -199,4 +160,22 @@
     width: 37px;
     height: autopx;
     cursor: pointer;
+}
+
+/* Style for error messages */
+.errorMessage {
+    color: #FF4C4C; /* Red color for error */
+    font-weight: normal;
+    margin-top: 10px;
+    font-family: 'Helvetica', sans-serif;
+    font-size: 18px;
+}
+
+/* Style for success messages */
+.successMessage {
+    color: #94C841; /* Green color for success */
+    font-weight: normal;
+    margin-top: 10px;
+    font-family: 'Helvetica', sans-serif;
+    font-size: 18px;
 }
