refreshes when bookmark is selected

--- a/frontend/src/components/Bookmark.css
+++ b/frontend/src/components/Bookmark.css
@@ -223,6 +223,6 @@ li a:hover {
 }
 /* Message when there are no bookmarks */
 .mybookmark-page p {
-  color: #616162;
+  color: #ffffff;
   font-size: 1.2rem;
 }
