--- a/frontend/src/components/AddALandlord.css
+++ b/frontend/src/components/AddALandlord.css
@@ -340,6 +340,17 @@ html, body {
     margin-bottom: 5px;
 }
 
+.add-a-landlord-additional-submit-text {
+    font-size: 16px;
+    color: black; /* Dark gray color for readability */
+    margin-top: -40px;
+    text-align: center;
+    padding-bottom: 10px; /* Add some padding at the bottom */
+    position: relative; /* Ensure it’s in the normal flow */
+    top: 30px;  /* Adjust this to place it beneath the Zip Code box */
+    right: -130px;
+}
+
 .add-a-landlord-submit-button {
     position: absolute;
     background-color: #93c83d;
