--- a/frontend/src/components/LandlordProfile.css
+++ b/frontend/src/components/LandlordProfile.css
@@ -315,7 +315,7 @@
 }
 
 .score-text {
-    background-color: #E8DC4E;
+    
     color: #4D55A5;
     font-size: 2rem;
     font-weight: bold;
@@ -324,6 +324,28 @@
     text-align: center;
     width: 80px;
     height: 80px;
+}
+.score-1{
+    background-color: #EE5354;
+    color:black;
+}
+
+.score-2{
+    background-color: #F8A327;
+    color:black;
+}
+
+.score-3{
+    background-color: #FBEE54;
+    color:black;
+}
+.score-4{
+    background-color: #75BE43;
+    color:black;
+}
+.score-5{
+    background-color: #27B797;
+    color:black;
 }
 
 /* Comment Section */
