--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -14,9 +14,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 100px;
+    padding: 30px;
+    box-sizing: border-box;
     margin-top: 40px;
     height: 120px;
+    width: 100%;
     background-color: #4D55A5;
 }
 
