--- a/frontend/src/components/MyRatings.module.css
+++ b/frontend/src/components/MyRatings.module.css
@@ -182,7 +182,7 @@
 
 .no-ratings-message {
     font-size: 20px;
-    color: #94C841;
+    color: #ffffff;
     text-align: left;
     margin-top: 20px;
     font-weight: noraml;
